css/style.css
:root{
    /* declaraciones primarias */
    --ff-primary: 'DM sans','Open Sans', sans-serif;
    --font-size-regular: 16px;
    --neutral-color-light: #F2F7F7;
    --neutral-color:#E2F1F3;
    --neutral-color-dark: #101019;
    --main-color-light:#D2EAEE;
    --main-color:#C3D7E9;
    --main-color-dark:#6A7481;
    --main-color-darkest:#3D424D;
    --accent-color-light:#EB7C33;
    --accent-color:#EE561E;
    --accent-color-dark:#D14310;
    --box-shadow: rgba(0, 0, 0, 0.25) 0px 3px 8px;
    /* declaraciones secundarias */
    --dark-mode-toggle-button-bg: var(--main-color-dark);
    --dark-mode-toggle-button-bg-hover: var(--main-color-darkest);
    --moon-color: var(--main-color-light);
    --background-color: var(--main-color);
    --calc-body-color: var(--main-color-light);
    --button-color: var(--accent-color);
    --button-color-hover:var(--accent-color-light);
    --button-text-color:var(--accent-color);
    --button-text-hover-color:var(--neutral-color-light);
    --text-color: var(--neutral-color-dark);
    --input-bg-color: var(--main-color-darkest);
}
.dark-mode{
    --background-color: var(--main-color-dark);
    --calc-body-color: var(--main-color-darkest);
    --text-color: var(--neutral-color);
    --button-color: var(--accent-color);
    --button-color-hover:var(--accent-color-dark);
    --button-text-color:var(--accent-color);
    --button-text-hover-color:var(--neutral-color);
    --input-bg-color:var(--main-color-light);
}
*{
    font-family: var(--ff-primary);
    margin: 0;
    padding: 0;
    border: 0;
    box-sizing: border-box;
    font-size: var(--font-size-regular);
    font-weight: 200;
}
::placeholder{
    color: var(--text-color);
}
body{
    background-color: var(--background-color);
    color: var(--text-color);
    transition: .75s;
    width: 100vw;
    height: 100vh;
}
body > *{
    transition: 250ms;
}
option{
    background-color: var(--background-color);
    color: var(--text-color);
}
#darkModeToggle{
    z-index: 999;
    background-color: var(--dark-mode-toggle-button-bg);
    border-radius: 100%;
    padding: .8rem 1rem;
    cursor: pointer;
    position: fixed;
    right: 3%;
    bottom: 3%;
    transition:350ms;
}
#darkModeToggle:hover{
    background-color: var(--dark-mode-toggle-button-bg-hover);
    transform: rotate(20deg);
}
#darkModeToggle i{
    font-size: 1.8rem;
    color: var(--moon-color);
}
.dark-mode-toggle-light{
    --dark-mode-toggle-button-bg: var(--neutral-color);
    --dark-mode-toggle-button-bg-hover: var(--neutral-color-light);
    --moon-color: var(--main-color-darkest);
}
h1{
    text-align: center;
    padding: 2rem 0 2.5rem;
    font-size: 1.9rem;
    font-weight: 600;
    background-image: linear-gradient(90deg, var(--neutral-color-dark), var(--main-color-darkest));
    background-clip: text;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
}
.calc-body{
    width: 80%;
    max-width: 600px;
    margin: 5rem auto 0;
    padding: 2rem;
    background-color: var(--calc-body-color);
    border-radius: .8rem;
    display: flex;
    flex-direction: column;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
}
.filler{
    background-color: transparent;
    height: 5rem;
}
@media only screen and (max-width: 576px) {
    .calc-body{
        width: 100%;
        height: 100%;
        margin: 0;
        border-radius: 0;
        padding: 2.5rem;
        box-shadow: none;
    }
    #darkModeToggle{
        padding: .6rem .8rem;
    }
    .filler{
        display: none;
    }
}
form{
    display: flex;
    flex-direction: column;
}
label{
    padding: .2rem 0;
    width: 100%;
    font-size: .95rem;
    font-weight: 400;
}
input, select{
    padding: .4rem;
    width: 100%;
    margin: .8rem 0 .4rem;
    background-color: transparent;
    border: 1px solid var(--input-bg-color);
    border-radius: .3rem;
    color: var(--text-color);
    box-shadow: var(--box-shadow);
}
#calcular{
    margin: 1.5rem 0;
    padding: .75rem 0;
    border-radius: .3rem;
    background-color: transparent;
    border: var(--button-color) 2px solid;
    color: var(--button-text-color);
    text-align: center;
    font-weight: 600;
    transition: 350ms;
    box-shadow: var(--box-shadow);
}
#calcular:hover{
    background-color:var(--button-color);
    color: var(--button-text-hover-color);
    cursor: pointer;
}
#results {
    visibility: hidden;
    font-weight: 400;
}

